@@ -22,6 +22,7 @@
     * 0046 FIX: Allowing "-" chars in var names again...
     * 0049 FIX: Fixed check-mk-automation call on each new created apache thread...
     * 0203 FIX: Changed sidebar reload interval to be more random...
+    * 0204 FIX: Reduced I/O on logins with access time recording or failed login counts...
 
     WATO:
     * 0053 New rule for configuring the display_name of a service...
